# intensive_django

./: .flake8  .gitignore  Makefile  README.md  generate_requirements.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: python-app.yaml  python-app.yml
intensive_django/: .env  .env-example  Makefile  data.json  manage.py  pytest.ini
intensive_django/Core/: models.py  views.py
intensive_django/about/: tests.py  urls.py  views.py
intensive_django/allure-report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
intensive_django/allure-report/export/: influxDbData.txt  prometheusData.txt
intensive_django/allure-report/history/: duration-trend.json  history.json  retry-trend.json
intensive_django/allure-report/widgets/: duration.json  severity.json  suites.json  summary.json
intensive_django/catalog/: admin.py  models.py  tests.py  urls.py  validators.py  views.py
intensive_django/catalog/migrations/: 0001_initial.py  0001_squashed_0010_auto_20221105_2125.py  0002_auto_20221031_1654.py  0003_alter_item_text.py  0004_alter_item_text.py  0005_alter_item_text.py  0006_alter_item_text.py  0007_alter_item_text.py  0008_auto_20221105_2039.py  0009_auto_20221105_2121.py  0010_auto_20221105_2125.py  0011_auto_20221107_1957.py  0012_alter_item_text.py  0013_auto_20221112_2305.py  0014_auto_20221114_1905.py  0015_auto_20221115_2123.py
intensive_django/catalog/templatetags/: define_action.py
intensive_django/default_tests/: defaults_test.py
intensive_django/feedback/: forms.py  models.py  tests.py  urls.py  views.py
intensive_django/feedback/migrations/: 0001_initial.py
intensive_django/fixtures/: data.json
intensive_django/homepage/: tests.py  urls.py  views.py
intensive_django/intensive_django/: asgi.py  settings.py  urls.py  wsgi.py
intensive_django/rating/: forms.py  models.py
intensive_django/rating/migrations/: 0001_initial.py
intensive_django/static-dev/js/: bootstrap.bundle.min.js
intensive_django/templates/: base.html  t.html
intensive_django/users/: context_processors.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
(+51 files in other folders)
