[tool.poetry]
name = "intensive_django"
version = "0.1.0"
description = ""
authors = ["h4x4d <sidenkoleg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
django = ">=3.2.0,<3.3.0"
django-markdownfield = "^0.10.0"
sorl-thumbnail = "^12.9.0"
django-cleanup = "^6.0.0"
pillow = "^9.3.0"
django-debug-toolbar = "^3.7.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
dlint = "^0.13.0"
isort = "^5.10.1"
absolufy-imports = "^0.3.1"
flake8-quotes = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
